# advsim

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY_SCOPE.md  advsim.example.yaml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
demos/: 01_list_techniques.sh  02_run_single_technique.sh  03_scenario_sarif_stix.sh  04_authorization_gate.sh  05_full_killchain.sh  run_all_demos.py
docs/: ARCHITECTURE.md  WRITING_TECHNIQUES.md
src/advsim/: __init__.py  actions.py  cli.py  config.py  library.py  model.py  report.py  runner.py  safety.py
src/advsim/scenarios/: full_killchain.yaml  persistence_and_evasion.yaml  recon_and_beacon.yaml
src/advsim/techniques/: c2_beacon_connect.yaml  c2_dns.yaml  collection_local_staging.yaml  credential_access_marker.yaml  defense_evasion_clear_log_marker.yaml  defense_evasion_masquerade_process.yaml  defense_evasion_timestomp.yaml  discovery_account.yaml  discovery_file_and_directory.yaml  discovery_network_config.yaml  discovery_permission_groups.yaml  discovery_process.yaml  discovery_system_info.yaml  execution_command_shell.yaml  exfil_emulated_dns.yaml  persistence_registry_run_key.yaml  persistence_scheduled_task.yaml  persistence_startup_folder.yaml
tests/: conftest.py  test_cli.py  test_library.py  test_reports.py  test_runner.py  test_scope_guard.py
