[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advsim"
version = "1.0.0"
description = "Benign, authorized-use-only adversary-emulation and detection-validation harness mapped to MITRE ATT&CK."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "COCL-1.0" }
authors = [{ name = "Cognis Digital" }]
keywords = [
    "adversary-emulation",
    "attack-simulation",
    "mitre-attack",
    "detection-validation",
    "purple-team",
    "red-team",
    "blue-team",
    "atomic-red-team",
    "caldera",
    "sarif",
    "stix",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/cognis-digital/advsim"
Repository = "https://github.com/cognis-digital/advsim"
Issues = "https://github.com/cognis-digital/advsim/issues"

[project.scripts]
advsim = "advsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
advsim = ["techniques/*.yaml", "scenarios/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
